@startuml

title __MENSUAL's Class Diagram__\n

  namespace com.example.myplanning {
    namespace activitats {
      namespace Mensual {
        class com.example.myplanning.activitats.Mensual.CalendariMensual {
            - calendariRecyclerView : RecyclerView
            - mesAnyText : Button
            + nextMesAction()
            + onItemClick()
            + prevMesAction()
            + seleccioAction()
            # onCreate()
            # onResume()
            - initWidgets()
            - setMesView()
        }
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace activitats {
      namespace Mensual {
        class com.example.myplanning.activitats.Mensual.MensualAdapter {
            - diesMes : ArrayList<LocalDate>
            + MensualAdapter()
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
        }
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace activitats {
      namespace Mensual {
        interface com.example.myplanning.activitats.Mensual.MensualAdapter.onItemListener {
            {abstract} + onItemClick()
        }
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace activitats {
      namespace Mensual {
        class com.example.myplanning.activitats.Mensual.MensualViewHolder {
            + diaMes : TextView
            + parentView : View
            - dies : ArrayList<LocalDate>
            + MensualViewHolder()
            + onClick()
        }
      }
    }
  }
  

  com.example.myplanning.activitats.Mensual.CalendariMensual .up.|> com.example.myplanning.activitats.Mensual.MensualAdapter.onItemListener
  com.example.myplanning.activitats.Mensual.CalendariMensual -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myplanning.activitats.Mensual.MensualAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.myplanning.activitats.Mensual.MensualAdapter o-- com.example.myplanning.activitats.Mensual.MensualAdapter.onItemListener : onItemListener
  com.example.myplanning.activitats.Mensual.MensualAdapter +-down- com.example.myplanning.activitats.Mensual.MensualAdapter.onItemListener
  com.example.myplanning.activitats.Mensual.MensualViewHolder .up.|> android.view.View.OnClickListener
  com.example.myplanning.activitats.Mensual.MensualViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.myplanning.activitats.Mensual.MensualViewHolder o-- com.example.myplanning.activitats.Mensual.MensualAdapter.onItemListener : onItemListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
